Cambiado el manejo de las UUID